specified node version in package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "engines": {
+    "node": ">=20.10.0" 
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.1.0",
