--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "MIT",
   "engines": {
-    "node": ">=20.10.0" 
+    "node": "^20.10.0" 
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
